# mongo-c-driver

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CRYPT_README.md  Dockerfile  Earthfile  NEWS  README.rst  config.json  configure.sh  cycle-restart.sh  example.txt  hammer.sh  index.html  libbson-releases.html  libmongoc-releases.html  miniclient.py  mongocryptd.pid  objects.inv  reset.sh  search.html  searchindex.js  send_opmsg.py  test-commands.sh  test-pymongo.py  test.encrypted
.evergreen/: add-build-dirs-to-paths.sh  benchmark.yml  check-release-archive.sh  compile-unix.sh  compile-windows.sh  config.yml  example-config.yml  find-cmake.sh  install-uninstall-check.sh  integration-tests.sh  link-sample-program-bson.sh  link-sample-program.sh  run-auth-tests.sh  run-ocsp-test.sh  run-tests.sh  spec.patch
HELP-24602/: gdb.txt  gdb2.html  gdbraw.txt  shell.js  workload.yml  workload_find_10.csv  workload_find_10.gdb  workload_find_10.html  workload_find_10.stacks  workload_find_explicit_10.gdb  workload_find_explicit_10.html
_static/: documentation_options.js
doc/: api.rst  basic-troubleshooting.rst  mongoc_change_stream_destroy.rst  mongoc_change_stream_error.rst  mongoc_change_stream_error_document.rst  mongoc_change_stream_next.rst  mongoc_change_stream_t.rst  mongoc_client_find_databases_with_opts.rst  mongoc_collection_aggregate.rst  tutorial.rst  (+9 more)
perf/: CMakeLists.txt  README.md  build_and_run.sh  googlebenchmark_to_perfsend.py  main.cpp  parallel_pool.c  parallel_pool.h  parallel_single.c  parallel_single.h  perf.cpp  perf_defines.h  perf_util.h
(+1440 files in other folders)
